--- a/package.json
+++ b/package.json
@@ -1,82 +1,83 @@
 {
-  "name": "lesson-27",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "tailwindcss build -i src/main.css -o public/tailwind.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Behzod",
-  "license": "ISC",
-  "devDependencies": {
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  },
-  "dependencies": {
-    "acorn": "^7.4.1",
-    "acorn-walk": "^7.2.0",
-    "braces": "^3.0.2",
-    "acorn-node": "^1.8.2",
-    "camelcase-css": "^2.0.1",
-    "color-name": "^1.1.4",
-    "binary-extensions": "^2.2.0",
-    "arg": "^5.0.2",
-    "cssesc": "^3.0.0",
-    "didyoumean": "^1.2.2",
-    "detective": "^5.2.1",
-    "defined": "^1.0.1",
-    "fast-glob": "^3.2.12",
-    "fill-range": "^7.0.1",
-    "fastq": "^1.15.0",
-    "function-bind": "^1.1.1",
-    "glob-parent": "^5.1.2",
-    "dlv": "^1.1.3",
-    "has": "^1.0.3",
-    "is-core-module": "^2.11.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
-    "chokidar": "^3.5.3",
-    "merge2": "^1.4.1",
-    "nanoid": "^3.3.4",
-    "is-number": "^7.0.0",
-    "micromatch": "^4.0.5",
-    "normalize-path": "^3.0.0",
-    "object-hash": "^3.0.0",
-    "picomatch": "^2.3.1",
-    "picocolors": "^1.0.0",
-    "postcss-js": "^4.0.0",
-    "postcss-nested": "^6.0.0",
-    "path-parse": "^1.0.7",
-    "postcss-selector-parser": "^6.0.11",
-    "is-binary-path": "^2.1.0",
-    "lilconfig": "^2.0.6",
-    "minimist": "^1.2.7",
-    "postcss-value-parser": "^4.2.0",
-    "queue-microtask": "^1.2.3",
-    "quick-lru": "^5.1.1",
-    "pify": "^2.3.0",
-    "resolve": "^1.22.1",
-    "postcss-import": "^14.1.0",
-    "reusify": "^1.0.4",
-    "run-parallel": "^1.2.0",
-    "source-map-js": "^1.0.2",
-    "to-regex-range": "^5.0.1",
-    "xtend": "^4.0.2",
-    "util-deprecate": "^1.0.2",
-    "read-cache": "^1.0.0",
-    "postcss-load-config": "^3.1.4",
-    "anymatch": "^3.1.3",
-    "readdirp": "^3.6.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "yaml": "^1.10.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Behzodjon2001/tailwind-first-project.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Behzodjon2001/tailwind-first-project/issues"
-  },
-  "homepage": "https://github.com/Behzodjon2001/tailwind-first-project#readme",
-  "description": ""
+    "name": "lesson-27",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "build": "tailwindcss build -i src/main.css -o public/tailwind.css",
+        "watch": "tailwindcss -i src/main.css -o public/tailwind.css --watch",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Behzod",
+    "license": "ISC",
+    "devDependencies": {
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4"
+    },
+    "dependencies": {
+        "acorn": "^7.4.1",
+        "acorn-walk": "^7.2.0",
+        "braces": "^3.0.2",
+        "acorn-node": "^1.8.2",
+        "camelcase-css": "^2.0.1",
+        "color-name": "^1.1.4",
+        "binary-extensions": "^2.2.0",
+        "arg": "^5.0.2",
+        "cssesc": "^3.0.0",
+        "didyoumean": "^1.2.2",
+        "detective": "^5.2.1",
+        "defined": "^1.0.1",
+        "fast-glob": "^3.2.12",
+        "fill-range": "^7.0.1",
+        "fastq": "^1.15.0",
+        "function-bind": "^1.1.1",
+        "glob-parent": "^5.1.2",
+        "dlv": "^1.1.3",
+        "has": "^1.0.3",
+        "is-core-module": "^2.11.0",
+        "is-extglob": "^2.1.1",
+        "is-glob": "^4.0.3",
+        "chokidar": "^3.5.3",
+        "merge2": "^1.4.1",
+        "nanoid": "^3.3.4",
+        "is-number": "^7.0.0",
+        "micromatch": "^4.0.5",
+        "normalize-path": "^3.0.0",
+        "object-hash": "^3.0.0",
+        "picomatch": "^2.3.1",
+        "picocolors": "^1.0.0",
+        "postcss-js": "^4.0.0",
+        "postcss-nested": "^6.0.0",
+        "path-parse": "^1.0.7",
+        "postcss-selector-parser": "^6.0.11",
+        "is-binary-path": "^2.1.0",
+        "lilconfig": "^2.0.6",
+        "minimist": "^1.2.7",
+        "postcss-value-parser": "^4.2.0",
+        "queue-microtask": "^1.2.3",
+        "quick-lru": "^5.1.1",
+        "pify": "^2.3.0",
+        "resolve": "^1.22.1",
+        "postcss-import": "^14.1.0",
+        "reusify": "^1.0.4",
+        "run-parallel": "^1.2.0",
+        "source-map-js": "^1.0.2",
+        "to-regex-range": "^5.0.1",
+        "xtend": "^4.0.2",
+        "util-deprecate": "^1.0.2",
+        "read-cache": "^1.0.0",
+        "postcss-load-config": "^3.1.4",
+        "anymatch": "^3.1.3",
+        "readdirp": "^3.6.0",
+        "supports-preserve-symlinks-flag": "^1.0.0",
+        "yaml": "^1.10.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Behzodjon2001/tailwind-first-project.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Behzodjon2001/tailwind-first-project/issues"
+    },
+    "homepage": "https://github.com/Behzodjon2001/tailwind-first-project#readme",
+    "description": ""
 }
